fixed to use promise. Added inout field

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 					<div class="form-group">
 						<div class="row">
 							<div class="col-xs-6">
-								<input type="text" class="form-control" id="newZipCode" placeholder="New Zip Code">
+								<input type="text" class="form-control" id="newCity" placeholder="City">
+								<input type="text" class="form-control" id="newState" placeholder="StateAbbr">
 							</div>
 							<div class="col-xs-6">
 								<button id="addCityBtn" type="button" class="btn btn-primary">Add City</button>
